Align text fixed

--- a/epython/styles.css
+++ b/epython/styles.css
@@ -329,7 +329,7 @@ width: 80%;
 }
 
 button {
-	margin: 10px;
+	
 }
 
 .console_input {
